# GenAI-with-Langchain-and-Huggingface

./: 02_LangChain_Components.ipynb  03_LangChain_Models.ipynb  README.md  main.py  pyproject.toml  requirements.txt
00_LangChain_imports/: LangChain_Imports_Overview.ipynb
01_LangChain_Components/: 00_LangChain_RoadMap.ipynb  01_LangChain_Components.ipynb  01_LangChain_INTRO.ipynb  01_LangChain_RoadMap.ipynb  02_LangChain_Models.ipynb  LangChain_INTRO.ipynb  README.md
01_Overview/: 00_LangChain_Imports_Overview.ipynb  01_LangChain_RoadMap.ipynb
02_Components/: 02_LangChain_Components.ipynb
03_Models/: 03_LangChain_Models.ipynb
04_prompts/: 04_LangChain_Prompts.ipynb  prompt_generator.py  prompt_ui_basic.py  prompt_ui_chain.py  prompt_ui_json.py  template.json
04_prompts/Chatbot/: chat_history.json  chatbot.py  message_palaceholder.py  messages.py
04_prompts/Research_Assistant/: app.py  template.json
LangChain/: README.md
_Developing_LLMs_Applications_with_LangChain/: 01_INTRO_LangChain_&_Chatbot_Mechanics.ipynb  01_LangChain_&_Chatbot_Mechanics.ipynb  02_Chains and Agents.ipynb  02_Chains_and_Agents.ipynb  03_RAG.ipynb  04_RAG_with_LangChain.ipynb  05_Improving_RAG_Architecture.ipynb  06_ Introduction_to_Graph_RAG.ipynb  chroma.sqlite3
_Developing_LLMs_Applications_with_LangChain/.ipynb_checkpoints/: 03_RAG-checkpoint.ipynb
_Developing_LLMs_Applications_with_LangChain/_data/: pyfile.py  white_house_executive_order_nov_2023.html
_LangChain_imports/: README.md
